Perkin-UAT/force-app/main/default/objects/PKI_Countries_Pricebooks__c/PKI_Countries_Pricebooks__c.object-meta.xml
<CustomObject>
    <label>PKI Countries Pricebooks</label>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>PKI Countries Pricebooks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKI Countries Pricebooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>