Perkin-UAT/force-app/main/default/objects/PKI_Countries_Pricebooks__c/fields/fxCountryISOAlpha2__c.field-meta.xml
<CustomField>
    <fullName>fxCountryISOAlpha2__c</fullName>
    <formula>PKI_Country__r.Country_ISO_Alpha_2__c</formula>
    <label>fxCountryISOAlpha2</label>
    <type>Text</type>
</CustomField>