Perkin-UAT/force-app/main/default/objects/PKI_Countries_Pricebooks__c/fields/PKI_Country__c.field-meta.xml
<CustomField>
    <fullName>PKI_Country__c</fullName>
    <description>country from the master PKI Country List</description>
    <inlineHelpText>Select a country from the master PKI Country List</inlineHelpText>
    <label>PKI Country</label>
    <referenceTo>PKI_Country__c</referenceTo>
    <relationshipLabel>PKI Countries Pricebooks</relationshipLabel>
    <relationshipName>PKI_Countries_Pricebooks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>