Perkin-UAT/force-app/main/default/objects/PKI_Countries_Pricebooks__c/fields/PriceBookName__c.field-meta.xml
<CustomField>
    <fullName>PriceBookName__c</fullName>
    <description>This is pricebook names used in S.FLOW 2000</description>
    <inlineHelpText>The Pricebook name must match exactly to the Pricebooks in use (this is not a lookup field, so type the name correctly)</inlineHelpText>
    <label>Price Book Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>