Perkin-UAT/force-app/main/default/objects/PKI_Countries_Pricebooks__c/listViews/PKI_Country_Pricebooks_ALL.listView-meta.xml
<ListView>
    <fullName>PKI_Country_Pricebooks_ALL</fullName>
    <columns>NAME</columns>
    <columns>PKI_Country__c</columns>
    <columns>fxCountryISOAlpha2__c</columns>
    <columns>PriceBookName__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Inactive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>PKI Country Pricebooks (ALL)</label>
</ListView>